--- a/shop.noarika.com/design_PC/design_basketpage.html
+++ b/shop.noarika.com/design_PC/design_basketpage.html
@@ -72,6 +72,13 @@
             	<a href=[ORDER] class="btn">購入手続きへ進む</a>
             </div>
     	</div>
+	[IFAMAZON]
+        <div class="btn-wrap clear">
+            <div class="btn-wrap-order">
+                <p class=“amazonButtonWrap”> [AMAZON_PAY_BUTTON] </p>
+            </div>
+    	</div>
+	[IFENDAMAZON]
         
 	</div>
     
