--- a/shop.noarika.com/design_SMP/smartphone_design_top.html
+++ b/shop.noarika.com/design_SMP/smartphone_design_top.html
@@ -12,7 +12,7 @@
 <{/if}>
 
 <ul id="index_banner">
-<li><a href="/smartphone/news.html?date=20160523132435"><img src="/design/noarika/img/sp/bn_center01.jpg" alt="オープン記念キャンペーン！全品ポイント１５％還元キャンペーン！"></a></li>
+<li><a href="/smartphone/news.html?date=20160627113942"><img src="/design/noarika/img/sp/amazon_payments_ForSmartphone_1280x640.png" alt="Amazon.co.jpのアカウントでお買い物ができようになりました！"></a></li>
 <li><a href="/smartphone/page1.html"><img src="/design/noarika/img/sp/bn_center03.jpg" alt="invite.L"></a></li>
 <li><a href="/shopbrand/ct3/"><img src="/design/noarika/img/sp/bn_center02.jpg" alt="液晶保護フィルム各種あります。スマホケースといっしょにいかがでしょうか？"></a></li>
 </ul>
