--- a/shop.noarika.com/design_PC/design_mainpage.html
+++ b/shop.noarika.com/design_PC/design_mainpage.html
@@ -4,7 +4,7 @@
 
 <table height="960" class="bn-center">
 <tr><td valign="top">
-<a href="/new/2016-05-23-132435.html"><img src="/design/noarika/img/bn_center01.jpg" alt="オープン記念キャンペーン！全品ポイント１５％還元キャンペーン！"></a>
+<a href="/new/2016-06-27-113942.html"><img src="/design/noarika/img/sp/amazon_payments_ForSmartphone_1280x640.png" alt="Amazon.co.jpのアカウントでお買い物ができようになりました！"></a>
 </td></tr>
 <tr><td valign="top">
 <a href="/html/page1.html"><img src="/design/noarika/img/bn_center03.jpg" alt="invite.L"></a>
