add new file smartphone_design_page2.html

--- a/shop.noarika.com/design_SMP/smartphone_design_page2.html
+++ b/shop.noarika.com/design_SMP/smartphone_design_page2.html
@@ -1,12 +1,24 @@
+<img src="http://gigaplus.makeshop.jp/noarika/img/banner_summer2016.png" alt="夏のスマホケース2016" style="max-width: 100%;">
 
-<h2 class="titleh2Text">夏のスマホケース2016！！</h2>
-夏にピッタリのおしゃれなスマホケースを集めました！
+<h2 class="titleh2Text">夏のスマホケース2016</h2>
+夏にピッタリのおしゃれなスマホケースを集めました！<br>
+暑い夏のファッションに合わせてスマートフォンケースも夏仕様にしてみてはいかがでしょうか？
 
 <div class="mainText">
+<strong>はじめてお買い上げの方に500円OFFクーポンをプレゼント！</strong>
+<br><br>
 
-＜イメージバナー＞
+<table class="coupTable">
+ <tr><th scope="row">クーポンコード</th><td><span style="font-size:large">summer2016</span></td></tr>
+ <tr><th scope="row">有効期間</th><td>2016/08/01 0:00 &#12316; 2016/08/31 23:59</td></tr>
+ <tr><th scope="row">クーポン内容</th><td>商品金額合計より500円OFF</td></tr>
+ <tr><th scope="row">利用条件</th><td>当ショップにアカウントを登録し<br>はじめてお買い上げのお客様</td></tr>
+ <tr><th scope="row">利用可能回数</th><td>お一人様1回まで利用可能</td></tr>
+ <tr><th scope="row">クーポン対象商品</th><td>ショップ内全商品対象</td></tr>
+<table>
 <br>
-<br>
+<a href="#howtocoup"><span style="text-decoration:underline">※クーポンの利用方法はこちら</span></a>
+<br><br>
 
 <h3 class="titleh3Text">外は暑くてもクールにキメる！</h3>
 <br>
@@ -102,6 +114,24 @@ ZENUSのデニムペイズリーダイアリーは、ファッションモチー
 夏 海 プール フェス 冬 スキー スノボー に大活躍！<br>
 <a href="http://shop.noarika.com/shop/shopbrand.html?search=SC-BK-0002"><img alt="bikit2 スマートフォン用ファッション防水ポーチ" src="http://gigaplus.makeshop.jp/noarika/img/item/bk20005_01.jpg" style="max-width: 100%;"></a><br>
 <br>
+<br>
+
+<h3 class="titleh3Text"><a name = "howtocoup"></a><span style="text-decoration:underline">※クーポンの利用方法</span></h3>
+<br>
+
+1. 商品ページで対象商品をカートに入れる。<br>
+2. 決済画面STEP1で利用したいクーポンコードを入力する。<br> 
+3. 決済画面STEP2でクーポンが適用されていることを確認して、注文を進める。<br>
+<br>
+<img src="http://gigaplus.makeshop.jp/noarika/img/coupon_01_005.png" alt="クーポンの利用方法" style="max-width: 100%;">
+<br>
+<br>
+<strong>ご利用時の注意事項、以下の注文ではクーポンを利用することができません</strong><br> 
+・「定期購入」の商品を含んだ注文<br> 
+・GMOポイントにログインしての「クイック購入」による注文<br> 
+・ヤフオク!経由の注文<br> 
+・モバイル（ガラケー）からの注文（PCおよびスマホからの注文のみ利用することができます）<br> 
 
 </div>
+
 
