update for blog URL

--- a/shop.noarika.com/design_SMP/smartphone_design_header.html
+++ b/shop.noarika.com/design_SMP/smartphone_design_header.html
@@ -37,7 +37,7 @@
             </li>
             <li><a href="<{$url.company}>">このショップについて</a></li>
             <li><a href="<{$guide_url}>">ご利用ガイド</a></li>
-            <li><a href="http://blog.noarika.com/">ブログ</a></li>
+            <li><a href="/blog/">ブログ</a></li>
             <li><a href="<{$support_url}>">お問い合わせ</a></li>
         </ul>
        
@@ -54,3 +54,4 @@
         return false;
     });
 </script>
+
