--- a/shop.noarika.com/design_PC/design_mainpage.html
+++ b/shop.noarika.com/design_PC/design_mainpage.html
@@ -4,14 +4,19 @@
 
 <table height="960" class="bn-center">
 <tr><td valign="top">
+<a href="/html/page2.html" target="main"><img src="http://gigaplus.makeshop.jp/noarika/img/banner_summer2016.png" alt="夏のスマホケース2016"></a>
+</td></tr>
+<tr><td valign="top">
 <a href="/new/2016-06-27-113942.html"><img src="/design/noarika/img/sp/amazon_payments_ForSmartphone_1280x640.png" alt="Amazon.co.jpのアカウントでお買い物ができようになりました！"></a>
 </td></tr>
 <tr><td valign="top">
 <a href="/html/page1.html"><img src="/design/noarika/img/bn_center03.jpg" alt="invite.L"></a>
 </td></tr>
+<!--
 <tr><td valign="top">
 <a href="/shopbrand/ct3/"><img src="/design/noarika/img/bn_center02.jpg" alt="液晶保護フィルム各種あります。スマホケースといっしょにいかがでしょうか？"></a>
 </td></tr>
+-->
 </table>
 
 <!-- サブバナー ここまで -->
