--- a/shop.noarika.com/design_PC/design_mainpage.html
+++ b/shop.noarika.com/design_PC/design_mainpage.html
@@ -3,14 +3,19 @@
 <!-- サブバナー ここから -->
 
 <table height="960" class="bn-center">
+<!--
 <tr><td valign="top">
 <a href="/html/page1.html"><img src="/design/noarika/img/bn_center03.jpg" alt="invite.L"></a>
 </td></tr>
+-->
 <tr><td valign="top">
-<a href="/shopbrand/ct3/"><img src="/design/noarika/img/bn_center02.jpg" alt="液晶保護フィルム各種あります。スマホケースといっしょにいかがでしょうか？"></a>
+<a href="/shopbrand/ct46/"><img src="http://gigaplus.makeshop.jp/noarika/img/iphone7_thin_banner.png" alt="iPhone7ケース"></a>
 </td></tr>
 <tr><td valign="top">
 <a href="/new/2016-06-27-113942.html"><img src="/design/noarika/img/sp/amazon_payments_ForSmartphone_1280x640.png" alt="Amazon.co.jpのアカウントでお買い物ができようになりました！"></a>
+</td></tr>
+<tr><td valign="top">
+<a href="/shopbrand/ct3/"><img src="/design/noarika/img/bn_center02.jpg" alt="液晶保護フィルム各種あります。スマホケースといっしょにいかがでしょうか？"></a>
 </td></tr>
 <!--
 <tr><td valign="top">
