--- a/shop.noarika.com/design_SMP/smartphone_design_top.html
+++ b/shop.noarika.com/design_SMP/smartphone_design_top.html
@@ -30,6 +30,7 @@
         <h2 class="heading newHeading"><img src="/design/noarika/img/sp/tit_new.jpg" alt="新着商品"></h2>
         <{$newitem_html}>
     </section>
+<div class="more"><a href="/smartphone/list.html?category_code=all_items">もっと見る</a></div>
 <{/if}>
 
 
