--- a/shop.noarika.com/design_PC/design_detailpage.html
+++ b/shop.noarika.com/design_PC/design_detailpage.html
@@ -55,8 +55,10 @@
 <p><a href=[ITEMIMAGE_VIEW_3]><img src=[ITEMIMAGE_3_L]></a><br><span>[ITEMCAPTION_3]</span></p>
     </div>
 
-   
-    <!--最近チェックした商品-->
+        <!--商品グループ-->
+        [BRANDGROUP]
+        
+        <!--最近チェックした商品-->
     [IF_RECENT]
         <div class="section detail-recent item-list">
         <h3><img src="/design/noarika/img/title/tit_recent.jpg" alt="最近チェックした商品"></h3>
