--- a/shop.noarika.com/design_PC/design_bottom.html
+++ b/shop.noarika.com/design_PC/design_bottom.html
@@ -1,4 +1,8 @@
-ass="page-top"><a href="#wrap"><img src="/design/noarika/img/btn_pageTop.jpg" alt="ページトップへ"></a></p>
+    </td>
+    </tr>
+    </table>
+
+            <p class="page-top"><a href="#wrap"><img src="/design/noarika/img/btn_pageTop.jpg" alt="ページトップへ"></a></p>
     <!--//wrapper--></div>
     
 <div id="footer_guideWrap">
@@ -46,7 +50,10 @@ ass="page-top"><a href="#wrap"><img src="/design/noarika/img/btn_pageTop.jpg" al
                     <li>
                         <h3>お支払いについて</h3>
                         <p>お支払いは以下の方法がご選択いただけます。</p>
-                        <img src="/design/noarika/img/guide_01.png" alt="支払い情報"><br /><br />
+                        <p>・クレジットカード</p>
+                        <p>・Amazonペイメント</p>
+                        <p>・銀行振込</p>
+                        <p>・代金引換</p>
                         <p>※銀行振込は前払いです。手数料はご負担ください。<br>
                         ※代引き手数料は下記のとおりです。<br>　お買い上げ金額1万円未満　300円<br>　お買い上げ金額1万円以上3万円未満　400円<br>　3万円以上　無料</p>
                     </li>
