--- a/shop.noarika.com/design_PC/design_topmenu.html
+++ b/shop.noarika.com/design_PC/design_topmenu.html
@@ -18,7 +18,7 @@
             <li>[LOGINTYPEZ]</li>
             <li><form action="/shop/shopbrand.html" method="post" name="top_search"><input type="text" name="search" class="head-search-input"><a href="JavaScript:document.top_search.submit()" class="btn head-search-btn">検索</a></form></li>
             <li>[CART_INSIDE1]</li>
-            <li><img src="/design/noarika/img/header_img01.jpg" alt="支払い情報"></li>
+            <li><a href="http://shop.noarika.com/new/2016-06-27-113942.html"><img src="/design/noarika/img/header_img03.png" alt="Amazonペイメント"></a></li>
         </ul>
 
         <ul class="global-nav">
