Update for top banner

--- a/shop.noarika.com/design_PC/design_mainpage.html
+++ b/shop.noarika.com/design_PC/design_mainpage.html
@@ -5,7 +5,7 @@
 <table height="960" class="bn-center">
 <!--
 <tr><td valign="top">
-<a href="/html/page1.html"><img src="/design/noarika/img/bn_center03.jpg" alt="invite.L"></a>
+<a href="/html/page3.html"><img src="http://gigaplus.makeshop.jp/noarika/img/banner_thin_winter2016.png" alt="年末感謝キャンペーン2016"></a>
 </td></tr>
 -->
 <tr><td valign="top">
